--- a/src/index.css
+++ b/src/index.css
@@ -220,11 +220,11 @@ li {
   /* Managed by GSAP usually, but default 1 for visibility dev */
 }
 
-/* Right alignment for Intro as requested */
+/* Left alignment for Intro as updated */
 .intro-text {
-  align-self: flex-end;
-  text-align: right;
-  padding-right: 10%;
+  align-self: flex-start;
+  text-align: left;
+  padding-left: 10%;
 }
 
 /* Left alignment for Core Infra */
